Change the relative path to display images

--- a/Lecture 1 (personal notes).ipynb
+++ b/Lecture 1 (personal notes).ipynb
@@ -17,7 +17,7 @@
     "\n",
     "The basic structure for running Python\n",
     "\n",
-    "<img src=\"figures/project_flow.png\" alt=\"drawing\" width=\"650\"/>\n",
+    "<img src=\"Lecture 01/figures/project_flow.png\" alt=\"drawing\" width=\"650\"/>\n",
     "\n",
     "- Python is a general purpose language\n",
     "- Researchers and practitioners add new functionalities all the time\n",
@@ -50,7 +50,7 @@
     "The libraries will be added to your Python installation.\n",
     "\n",
     "\n",
-    "<img src=\"figures/terminal-install.png\" alt=\"drawing\" width=\"650\"/>\n",
+    "<img src=\"Lecture 01/figures/terminal-install.png\" alt=\"drawing\" width=\"650\"/>\n",
     "\n",
     "- \"pip3\" is the installer command and you only need to run it once for each package.\n",
     "- Type \"pip3 list\" in the terminal to see currently installed packages\n",
@@ -127,11 +127,11 @@
     "You can open the datasets in the current environment\n",
     "- Click on the \"Variables\" button in the top bar to open a panel\n",
     "\n",
-    "<img src=\"figures/topbar.png\" alt=\"drawing\" width=\"650\"/>\n",
+    "<img src=\"/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 01/figures/topbar.png\" alt=\"drawing\" width=\"650\"/>\n",
     "\n",
     "- Double click on \"carfeatures\" in the \"Jupyter: Variables\" tab\n",
     "\n",
-    "<img src=\"figures/sampledata.png\" alt=\"drawing\" width=\"650\"/>\n",
+    "<img src=\"Lecture 01/figures/sampledata.png\" alt=\"drawing\" width=\"650\"/>\n",
     "\n",
     "- Each row is an observation (a car)\n",
     "- Each column is the value of a variable (a feature of that car)"
@@ -741,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
