Change the formatting (heading 3's)

--- a/Lecture 03/Lecture 3.ipynb
+++ b/Lecture 03/Lecture 3.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,22 +68,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\" >\n",
-    "Examples of numPy numbers"
+    "### Examples of numPy numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.141592653589793"
+       "2.718281828459045"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +90,8 @@
    "source": [
     "# Computes \"pi\" (3.14...)\n",
     "\n",
-    "np.pi"
+    "np.pi\n",
+    "np.e # also work for the Euler constant"
    ]
   },
   {
@@ -99,16 +99,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\" >\n",
-    "\n",
-    "Examples of numPy functions\n",
+    "### Examples of numPy functions\n",
     "\n",
     "$ ln(x), e^x, sin(x), cos(x), \\sqrt{x}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,17 +122,33 @@
     }
    ],
    "source": [
-    "# log(x) computes the logarithm with base \"e\" (Euler constant)\n",
-    "# exp(x) compute the Euler constant raised to the power of \"x\"\n",
-    "# sing(x) computes the sine of x\n",
-    "# cos(x) computes the cosine of x\n",
-    "# In this example, we're substituting x = 1\n",
-    "\n",
-    "print(np.log(1))\n",
-    "print(np.exp(1))\n",
-    "print(np.sin(1))\n",
-    "print(np.cos(1))\n",
-    "print(np.sqrt(1))"
+    "print(np.log(1)) # log(x) computes the logarithm with base \"e\" (Euler constant)\n",
+    "print(np.exp(1)) # exp(x) compute the Euler constant raised to the power of \"x\"\n",
+    "print(np.sin(1)) # sing(x) computes the sine of x\n",
+    "print(np.cos(1)) # cos(x) computes the cosine of x\n",
+    "print(np.sqrt(1)) # In this example, we're substituting x = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Euler constant also works using math package\n",
+    "import math\n",
+    "math.exp(1)"
    ]
   },
   {
@@ -153,28 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.718281828459045"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import math\n",
-    "math.exp(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +183,7 @@
     "# Include your answer here:\n",
     "x = 5\n",
     "print(np.pi * x**2)\n",
-    "print(1/(np.sqrt(2*np.pi))*(np.e**(-x**2)))\n",
+    "print(1/(np.sqrt(2*np.pi)) * np.e**(-x**2))\n",
     "\n"
    ]
   },
@@ -207,8 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "Create an array from a list\n",
+    "### Create an array from a list\n",
     "\n",
     "$ \\text{ }$\n",
     "$ a = \\begin{pmatrix} 1 \\\\ 2 \\\\ 3 \\end{pmatrix}\n",
@@ -219,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -233,10 +225,32 @@
     }
    ],
    "source": [
-    "#??\n",
+    "# Create a column vector\n",
     "temp1 = [[1,2,3]] # Should change it to a 2D array so that it could be transposed\n",
     "arr1 = np.array(temp1)\n",
+    "# Transpose the array and print\n",
     "print(arr1.T)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Could also use `np.column_stack`\n",
+    "temp2 = np.column_stack([[1,2,3]])\n",
+    "print(temp2)"
    ]
   },
   {
@@ -258,14 +272,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "\n",
-    "Accessing an element of an array"
+    "### Accessing an element of an array and a matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,12 +298,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a matrix\n",
+    "mat1 = np.array([[1,1,1],[2,2,2]])\n",
+    "\n",
+    "# Access the first row\n",
+    "print(mat1[0,:])\n",
+    "\n",
+    "# Access the first element of the first row\n",
+    "print(mat1[0,0])"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "Operations with a single array and a scalar"
+    "### Operations with a single array and a scalar"
    ]
   },
   {
@@ -306,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,8 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "Element-by-element addition between two arrays of the same size\n",
+    "### Element-by-element addition between two arrays of the same size\n",
     "\n",
     "$\\text{ }$\n",
     "\n",
@@ -349,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -375,23 +410,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size =\"5\">\n",
-    "\n",
-    "<font color = 'red'> The default multiplication option is element-by element:\n",
+    "### <font color = 'red'> The **default multiplication option is element-by element** (i.e.: not dot product)\n",
     "\n",
     "$ a * b = \\begin{pmatrix} a_1 * b_1 \\\\ a_2 * b_2 \\\\ a_3 * b_3 \\end{pmatrix}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 0])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# By default\n",
+    "vec_a * vec_b"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dot product\n",
+    "print(np.dot(vec_a, vec_b))\n",
+    "print(np.matmul(vec_a, vec_b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -407,8 +474,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n8/f5jbq99j78q4d6lt_fsxw6tm0000gn/T/ipykernel_48718/3839639845.py:6: RuntimeWarning: divide by zero encountered in divide\n",
-      "  print(vec_a / vec_b)\n"
+      "/var/folders/n8/f5jbq99j78q4d6lt_fsxw6tm0000gn/T/ipykernel_62558/3559281149.py:6: RuntimeWarning: divide by zero encountered in divide\n",
+      "  print(vec_a / vec_b) # the denominator is 0 => inf.\n"
      ]
     }
    ],
@@ -426,13 +493,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "Summary statistics of an array"
+    "### Summary statistics of an array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +549,7 @@
        "11.4"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,12 +558,9 @@
     "# Create your own array and compute any of the above summary statistics\n",
     "\n",
     "# Create a list first and change it to np.array\n",
-    "ls1 = [10,8,15,0,24]\n",
-    "e = np.array(ls1)\n",
+    "e = np.array([10,8,15,0,24])\n",
     "# Find the mean of the array\n",
     "np.mean(e)\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -506,13 +569,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "<span style=\"color:red\"> Common Pitfall </span>: Make sure that the arrays have the same size"
+    "### <font size = \"5\"> <span style=\"color:red\"> Common Pitfall </span>: Make sure that the arrays have the same size when use default operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +584,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Here I try to combine two arrays of different size.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m vec_a \u001b[39m+\u001b[39;49m vec_c\n",
+      "Cell \u001b[0;32mIn[43], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Here I try to combine two arrays of different size.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[39m#vec_a + vec_c\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m vec_a \u001b[39m*\u001b[39;49m vec_c\n",
       "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (5,) "
      ]
     }
@@ -530,12 +592,14 @@
    "source": [
     "# Here I try to combine two arrays of different size.\n",
     "\n",
-    "vec_a + vec_c"
+    "vec_a + vec_c\n",
+    "\n",
+    "#vec_a * vec_c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -574,22 +638,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "\n",
-    "Create a vector of random variables"
+    "### Create a vector of random variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.63181255 -0.32087979 -0.07623208 -0.91614674 -0.56853408 -0.04973505\n",
-      "  0.11211211 -1.24375442 -0.68226491  0.56446643]\n"
+      "[ 1.12384332  0.15297311 -0.03299818 -0.72678174  1.01238071  2.98875762\n",
+      "  0.09549932  0.98999452  0.65607688  1.16955827]\n"
      ]
     }
    ],
@@ -599,7 +661,7 @@
     "# mean \"loc\" (location) and standard deviation \"scale\"\n",
     "# the number of distinct variabels is \"size\"\n",
     "\n",
-    "randomvar_a = np.random.normal(loc=0, scale=1, size=10) # a Z distribution\n",
+    "randomvar_a = np.random.normal(loc=0, scale=1, size=10) # a list of number following a z distribution\n",
     "print(randomvar_a)"
    ]
   },
@@ -610,15 +672,15 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "Random numbers differ every time!\n",
+    "### **Random numbers differ every time!**\n",
     "\n",
     "- Avoid this problem by drawing from a \"pregenerated\" set.\n",
-    "- This is called a seed"
+    "- This is called a **seed**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -755,8 +817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "Creating a matrix by stacking different rows\n",
+    "### Creating a matrix by stacking different rows\n",
     "\n",
     "$ \\text{ }$\n",
     "\n",
@@ -768,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -791,42 +852,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<font size = \"5\">\n",
-    "Creating a matrix by stacking different columns\n",
-    "\n",
-    "$ \\text{ } $\n",
-    "\n",
-    "$ Y = \\begin{pmatrix} 1 & 2 \\\\ 0 & 1 \\\\ 1 & 0 \\end{pmatrix}$"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 0]\n",
-      " [0 1]\n",
-      " [1 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# You can also stack columns\n",
-    "Y =  np.column_stack([[1,0,1],[0,1,0]])\n",
-    "print(Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +866,40 @@
     }
    ],
    "source": [
-    "Y = np.row_stack([[1,0,1],[0,1,0]])\n",
+    "#Y = np.row_stack([[1,0,1],[0,1,0]])\n",
+    "#print(Y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font size = \"5\"> Creating a matrix by stacking different columns\n",
+    "\n",
+    "$ \\text{ } $\n",
+    "\n",
+    "$ Y = \\begin{pmatrix} 1 & 2 \\\\ 0 & 1 \\\\ 1 & 0 \\end{pmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [0 1]\n",
+      " [1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# You can also stack columns\n",
+    "Y =  np.column_stack([[1,0,1],[2,1,0]])\n",
     "print(Y)"
    ]
   },
@@ -848,8 +908,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "Transpose\n",
+    "### <font size = \"5\"> Transpose\n",
     "\n",
     "$ \\text{ }$\n",
     "\n",
@@ -858,45 +917,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[1, 0, 1],\n",
-       "       [0, 1, 0]])"
+       "       [2, 1, 0]])"
       ]
      },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 1],\n",
-       "       [0, 1, 0]])"
-      ]
-     },
-     "execution_count": 36,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Matrix Transpose\n",
-    "np.matrix.transpose(Y)"
+    "np.matrix.transpose(Y)\n",
+    "\n",
+    "# Or could use\n",
+    "#Y.T"
    ]
   },
   {
@@ -904,9 +945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "\n",
-    "Matrix multiplication\n",
+    "### <font size = \"5\"> Matrix multiplication\n",
     "\n",
     "$ XY = \\begin{pmatrix} 1 & 2 & 3 \\\\ \n",
     "                       4 & 5 & 6 \\\\\n",
@@ -918,26 +957,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4,  2],\n",
-       "       [10,  5],\n",
-       "       [16,  8]])"
+       "array([[ 4,  4],\n",
+       "       [10, 13],\n",
+       "       [16, 22]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Matrix Multiplication\n",
+    "# Matrix Multiplication, Method1\n",
     "\n",
     "np.matmul(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4  4]\n",
+      " [10 13]\n",
+      " [16 22]]\n",
+      "[[ 4  4]\n",
+      " [10 13]\n",
+      " [16 22]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.dot(X,Y)) # Method2\n",
+    "print(X @ Y) # Method3"
    ]
   },
   {
@@ -945,9 +1007,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\">\n",
-    "\n",
-    "Matrix inverse\n",
+    "### <font size = \"5\"> Matrix inverse\n",
     "\n",
     "$ X^{-1} = \\begin{pmatrix} 1 & 2 & 3 \\\\ \n",
     "                       4 & 5 & 6 \\\\\n",
@@ -957,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
