Did exercise in lecture 5 notes

--- a/Lecture 05/Lecture 5.ipynb
+++ b/Lecture 05/Lecture 5.ipynb
@@ -1016,16 +1016,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              mpg   cylinders  displacement       weight  acceleration\n",
+      "count  398.000000  398.000000    398.000000   398.000000    398.000000\n",
+      "mean    23.514573    5.454774    193.427136  2970.424623     15.568090\n",
+      "std      7.815984    1.701004    104.268683   846.841774      2.757689\n",
+      "min      9.000000    3.000000     68.000000  1613.000000      8.000000\n",
+      "25%     17.500000    4.000000    104.250000  2223.750000     13.825000\n",
+      "50%     23.000000    4.000000    148.500000  2803.500000     15.500000\n",
+      "75%     29.000000    8.000000    262.000000  3608.000000     17.175000\n",
+      "max     46.600000    8.000000    455.000000  5140.000000     24.800000\n",
+      "       life_expectancy  gdp_per_capita_usd\n",
+      "count       252.000000          255.000000\n",
+      "mean         72.682931        17230.949757\n",
+      "std           7.382636        25792.183785\n",
+      "min          52.910000          216.972968\n",
+      "25%          67.109750         2186.046581\n",
+      "50%          73.599000         6837.717826\n",
+      "75%          78.234892        19809.323135\n",
+      "max          85.078049       199377.481800\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your own code:\n",
+    "import pandas as pd\n",
+    "list_datasets = [\"features.csv\",\"worldbank_wdi_2019.csv\"]\n",
+    "ls_datanames = ['feature', 'bank']\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "#for dataset in list_datasets:\n",
+    "#    for dataname in ls_datanames:\n",
+    "for i in range(len(list_datasets)):\n",
+    "        ls_datanames[i] = pd.read_csv('/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 05/data/'+list_datasets[i])\n",
+    "        print(ls_datanames[i].describe())\n"
    ]
   },
   {
