--- a/Lecture 05/Lecture 5 Optional - While Loops.ipynb
+++ b/Lecture 05/Lecture 5 Optional - While Loops.ipynb
@@ -215,23 +215,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The index for the customer is: 1\n",
+      "The index for the customer is: 2\n",
+      "The index for the customer is: 3\n",
+      "The index for the customer is: 4\n",
+      "The customers list is full\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your code here\n",
     "\n",
+    "list_sports = [\"tennis\",\"golf\",\"golf\",\"tennis\",\"golf\",\"golf\"]\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "num_tennis = 0\n",
+    "for i in range(len(list_sports)):\n",
+    "    print('The index for the customer is: '+ str(i+1))\n",
+    "    if list_sports[i] =='tennis':\n",
+    "        num_tennis += 1\n",
+    "    if num_tennis == 2:\n",
+    "        print('The customers list is full')\n",
+    "        break\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -245,12 +262,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
