--- a/Lecture 07/Lecture 7.ipynb
+++ b/Lecture 07/Lecture 7.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import a CSV file (READ)\n",
-    "carfeatures = pd.read_csv(\"data/features.csv\")\n",
+    "carfeatures = pd.read_csv(\"/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data/features.csv\")\n",
     "\n",
     "# Save the dataset to another csv file (WRITE)\n",
-    "carfeatures.to_csv(\"data/features_stored.csv\")\n"
+    "carfeatures.to_csv(\"/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data//features_stored.csv\")\n"
    ]
   },
   {
@@ -104,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read a Stata file\n",
-    "carfeatures = pd.read_stata(\"data/features.dta\")\n",
+    "carfeatures = pd.read_stata(\"/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data/features.dta\")\n",
     "\n",
     "# Write a stata file\n",
-    "carfeatures.to_stata(\"data/features_stored.dta\")"
+    "carfeatures.to_stata(\"/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data/features_stored.dta\")"
    ]
   },
   {
@@ -127,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  Read\n",
-    "carfeatures = pd.read_excel(\"data/features.xlsx\")\n",
+    "carfeatures = pd.read_excel(\"/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data/features.xlsx\")\n",
     "\n",
     "# Write \n",
-    "carfeatures.to_excel(\"data/features_stored.xlsx\")\n",
+    "carfeatures.to_excel(\"/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data/features_stored.xlsx\")\n",
     "\n",
     "# Note: If the information is contained in a specifc sheet of the excel file\n",
     "# carfeatures = pd.read_excel(\"data/features.csv\",sheet_name = \"Sheet1\")\n"
@@ -268,7 +268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -282,12 +282,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "45fc1f684f6f416f40889115beff3ddf69879b64cf4bfee48cb72a61e9d15d1a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
