Update how to read multiple datasets and rewrite

--- a/Lecture 07/Lecture 7.ipynb
+++ b/Lecture 07/Lecture 7.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,13 +284,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -327,6 +320,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data'"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir('/Users/vincent/Documents/GitHub/qtm151spring2023/Lecture 07/data')\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a list of dataset names\n",
+    "ls_dataset_name = ['features']\n",
+    "ls_res_data = {}\n",
+    "\n",
+    "for i in range(len(ls_dataset_name)):\n",
+    "    ls_res_data[ls_dataset_name[i]] = pd.read_csv(ls_dataset_name[i]+'.csv') # Store the current file into the dictionary\n",
+    "    ls_res_data[ls_dataset_name[i]].to_excel(ls_dataset_name[i]+'_stored.xlsx') # Call it in the dictionary and write it to excel\n",
+    "    # Remember to change the suffix!!!"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -343,6 +374,13 @@
     "    - Labels the axes\n",
     "    - Labels the title"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
