--- a/Lecture 13/Lecture 13.ipynb
+++ b/Lecture 13/Lecture 13.ipynb
@@ -10,7 +10,7 @@
     "<font size = \"5\">\n",
     "\n",
     "- Starting a new module on manipulating data\n",
-    "- We will discuss NaNs and how to clean data\n"
+    "- We will discuss NAs and how to clean data\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +141,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 3,
-=======
-   "execution_count": 33,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -154,11 +150,7 @@
        "nan"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 3,
-=======
-     "execution_count": 33,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,11 +174,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
-=======
-   "execution_count": 34,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -233,11 +221,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 7,
-=======
-   "execution_count": 35,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -271,11 +255,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
-=======
-   "execution_count": 36,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -335,11 +315,7 @@
        "4.5"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 9,
-=======
-     "execution_count": 36,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,11 +357,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
-=======
-   "execution_count": 37,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -403,11 +375,7 @@
        "dtype: object"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 10,
-=======
-     "execution_count": 37,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,11 +403,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
-=======
-   "execution_count": 38,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -459,11 +423,7 @@
        "Name: alt, Length: 77, dtype: bool"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 11,
-=======
-     "execution_count": 38,
->>>>>>> upstream/main
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,11 +449,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 14,
-=======
-   "execution_count": 39,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -635,11 +591,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 16,
-=======
-   "execution_count": 40,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -693,11 +645,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 41,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,11 +670,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 39,
-=======
-   "execution_count": 42,
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [
     {
@@ -902,13 +846,8 @@
     "<font size = \"5\">\n",
     "Try it yourself!\n",
     "\n",
-<<<<<<< HEAD
     "- Are there any non-numeric values in \"lat\" or \"lng\"?\n",
     "- Use \".query()\" + \".str.isnumeric()\""
-=======
-    "- What is the column type of \"lat\" or \"long\"?\n",
-    "- Does it have any string variables?"
->>>>>>> upstream/main
    ]
   },
   {
@@ -978,7 +917,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-<<<<<<< HEAD
    "metadata": {},
    "outputs": [
     {
@@ -1008,8 +946,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-=======
->>>>>>> upstream/main
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +997,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "Recode values based on an interval <br>\n",
+    "Recode values based on a closed interval <br>\n",
     "\n",
     "$ \\qquad x_{bin} = \\begin{cases} ``A\" &\\text{ if \\quad} x_1 < x \\le x_2 \\\\\n",
     "                                  ``B\" &\\text{ if \\quad} x_2 < x \\le x_3 \\end{cases} $\n",
@@ -1070,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1097,6 @@
    "source": [
     "# Recode the lattitude\n",
     "\n",
-<<<<<<< HEAD
     "# Check the min and max in \"lat\"\n",
     "print(circuits[\"lat\"].min())\n",
     "print(circuits[\"lat\"].max())\n",
@@ -1170,9 +1105,6 @@
     "                                bins = [-90, 0, 90],\n",
     "                                right  = True, # close on the right\n",
     "                                labels = [\"South\", \"North\"]) \n",
-=======
-    "# Write your own code\n",
->>>>>>> upstream/main
     "\n",
     "display(circuits[\"lat\"])\n",
     "display(circuits[\"hemisphere\"])\n"
@@ -1440,11 +1372,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-<<<<<<< HEAD
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-=======
-    "hash": "21ede215e1d7050e85468e313dd1f4ce196ee27894ecac2da549fae8ddf074d3"
->>>>>>> upstream/main
    }
   }
  },
